DevOCL/src/objects/CLQ_Corrective_Action_Plan__c.object
<CustomObject>
    <description>This object links Inspection and Findings</description>
    <fields>
        <fullName>CLQ_Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_CAP_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAP Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Compliance_Summary_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Summary Rule</label>
        <referenceTo>CLQ_Rule__c</referenceTo>
        <relationshipLabel>Corrective Action Plans</relationshipLabel>
        <relationshipName>Corrective_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Documents_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Corrective Action Plan object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Findings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Findings</label>
        <referenceTo>CLQ_Findings__c</referenceTo>
        <relationshipLabel>Corrective Action Plans</relationshipLabel>
        <relationshipName>Corrective_Action_Plans_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Corrective Action Plans</relationshipLabel>
        <relationshipName>Corrective_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Planned_changes_in_system_Procedure__c</fullName>
        <label>Planned changes in system/Procedure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Recommendation__c</fullName>
        <label>Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Close-Not Addressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Revised - Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return for Revision</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Required_Documents_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Documents Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Responsibleperson_for_Implementation__c</fullName>
        <label>Responsible person for Implementation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CLQ_Short_term_Action_Taken__c</fullName>
        <label>Short term Action Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Signature_Submission_Date__c</fullName>
        <label>Signature Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Specialist_Approver_Comment__c</fullName>
        <label>Specialist/Approver Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_User_Initial__c</fullName>
        <label>User Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_User_Submitting_this_CAP__c</fullName>
        <label>User Submitting this CAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Corrective Action Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Corrective Action No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corrective Action Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>